_notes/errbyfile/FullBright.java.txt
ru\metaculture\protection\FullBright.java:167: error: method does not 
override or implement a method from a supertype
   @Override
   ^

  ru\metaculture\protection\FullBright.java:167: error: method does not 
override or implement a method from a supertype
     @Override
     ^
